examples/test/testpolicy10296.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10296
  namespace: namespace81
spec:
  podSelector:
    matchLabels:
      key18: value49
      key39: value6
      key42: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value9
          key10: value48
          key47: value47
      podSelector:
        matchLabels:
          key23: value24
          key45: value18
